<resources>
    <string name="app_name">GroceryDroid</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="about_app">About GroceryDroid</string>
    <string name="menu_help">Help</string>
    <string name="main_screen_prompt_default">Tap + to start</string>
    <string name="main_screen_prompt_lists_present">Choose a list</string>
    <string name="shopping_list_prompt_default">Tap + to add an item</string>
    <string name="shopping_list_prompt_items_present">Choose an item</string>
    <string name="add_list_prompt">Enter name of new list or store</string>
    <string name="save">Save</string>
    <string name="add_list_name_hint">Name</string>
    <string name="total_spent">Total spent:</string>
    <string name="shopping_list_title">Shopping list - </string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="stock_title">Stock list</string>
    <string name="confirm_delete_list">Are you sure you want to delete this whole list?</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="main_instructions">Choose a shopping list</string>
    <string name="show_all">Show all</string>
    <string name="hide_bought">Hide bought</string>
    <string name="choose_action_for_list">What would you like to do with this list?</string>
    <string name="choose_action_add_or_edit">Add or change items</string>
    <string name="choose_action_go_shopping">Go shopping</string>
    <string name="choose_action_delete_list">Delete this list</string>
    <string name="stock_menu_item_add_item">Add item</string>
    <string name="stock_menu_item_go_shopping">Go shopping</string>
    <string name="stock_menu_item_reset_all">Reset all to buy 0</string>
    <string name="shop_menu_item_add_item">Add item</string>
    <string name="shop_menu_item_reset_all">Reset list</string>
    <string name="shop_layout_total_spent_text">Spent this much money on list</string>
    <string name="shop_menu_show_bought_items">Show bought items</string>
    <string name="shop_menu_hide_bought_items">Hide bought items</string>
    <string name="grabber_icon">Grabber icon</string>
    <string name="sort_by_stock_order_activity_prompt_no_lists">No items to re-arrange</string>
    <string name="sort_by_stock_order_activity_prompt_lists_present">Drag items to match the order of your kitchen</string>
    <string name="sort_by_shop_order_activity_prompt_lists_present">Drag items to match the order of the store</string>
    <string name="sort_menu_save_order">Save</string>
    <string name="stock_menu_item_sort_items">Rearrange items</string>
    <string name="shop_menu_item_sort_items">Rearrange items</string>
    <string name="item_fragment_name_prompt">Name:</string>
    <!-- <string name="item_name">Item name</string> -->
    <string name="item_fragment_name_hint">Name</string>
    <string name="item_fragment_price_prompt">Price:</string>
    <string name="item_fragment_price_hint">Price</string>
    <string name="item_framgent_unit_size_prompt">Size:</string>
    <string name="item_framgent_unit_size_hint">Size</string>
    <string name="item_framgent_unit_label_prompt">Unit:</string>
    <string name="item_framgent_unit_label_hint">Unit</string>
    <string name="item_fragment_number_to_stock_prompt">Number to stock:</string>
    <string name="item">item</string>
    <string name="stock_menu_item_load_items_from_spreadsheet">Load from spreadsheet</string>
    <string name="shopping_list_prompt_all_bought">Done. Tap + to add an item</string>
    <string name="two_spaces">"  "</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="stock_activity_subtitle">Make a list</string>
    <string name="shop_activity_subtitle">Shop for these items</string>
    <string name="float_format">%.2f</string>
    <string name="int_format">%d</string>
    <string name="shop_item_format">%1$s - buy %2$d</string>
    <string name="buy_format">Buy %d</string>
    <string name="add_list">Add List</string>

    <string name="firebase_url">http://grocery-droid.firebaseio.com</string>
    <string name="firebase_url_format">http://grocery-droid.firebaseio.com/%s</string>


    <string name="about">Matt Boutell created GroceryDroid for his own use, but hopes that others may also find it useful.

        This idea was originally implemented by Matt\'s college roommates as a spreadsheet.\n\n

        Jimmy Theis reviewed code and design and helped with the database.\n\n

        Elise helped organize all the grocery items in the autocomplete feature.\n\n

        The rearrangeable lists are courtesy of CommonsWare (commonsware.com/cwac).\n\n

        The icons were created using Inkscape (inkscape.org) and generated using the Android Asset Studio (android-ui-utils.googlecode.com/hg/asset-studio/dist/index.html)\n\n

        Some ideas came from general-purpose grocery list apps like Out Of Milk and GrocerySmart.

        </string>
    <string name="help"><b>Getting Started</b>\n\n


1.  Create a list for a store (press +, then type the name, say FoodWorld).\n\n

2.  Click on the first list, FoodWorld.
Choose "Add or change items" from the dialog\n\n

3.  You are at the Make a List screen. Your list will be blank the first time.
Click + to add items you regularly buy, even if not every trip.
You can add prices and sizes if you like.\n\n

4.  Each time you are preparing to shop, click the buttons
to choose how many of each item you would like to buy.
    In a given shopping trip, many items may just stay 0.\n\n

5.  Select the Go Shopping option.\n\n

6.  You are now at the Go Shopping screen. Your list will now contain
only those items with non-zero quantities you chose in the previous screen.\n\n

7.  Check them off as you shop and they will disappear.
If you prefer them to appear but with checkmarks, choose the Show bought items option.\n\n

<b>Customizing Item Order for Faster Lists and Shopping</b>\n\n

This app is all about making lists quickly. You can order your
items so that when you are making the list, the order the items appear
matches your kitchen, and when you are shopping, the order the items appear
matches the store.\n\n

1. From the Make a List screen, choose the Rearrange Items option.
Drag the items up and down so that their order matches your kitchen.
When you are done, click the save option (the checkbox).\n\n

2. From the Go Shopping screen, choose the Rearrange Items option.
Drag the items around so that their order matches the store.
When you are done, click the save option (the checkbox).\n\n
    </string>

</resources>
