<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/stock_menu_item_add_name"
        android:icon="@mipmap/content_new"
        app:showAsAction="always"
        android:title="@string/stock_menu_item_add_item"/>
    <item
        android:id="@+id/stock_menu_item_go_shopping"
        android:icon="@mipmap/ic_action_shop"
        app:showAsAction="ifRoom"
        android:title="@string/stock_menu_item_go_shopping"/>
    <item
        android:id="@+id/stock_menu_item_reset_all"
        android:icon="@mipmap/ic_action_notepaper_zero"
        app:showAsAction="ifRoom"
        android:title="@string/stock_menu_item_reset_all"/>
    <item
        android:id="@+id/stock_menu_item_sort_items"
        android:icon="@mipmap/ic_action_grabber"
        app:showAsAction="ifRoom"
        android:title="@string/stock_menu_item_sort_items"/>
    <!-- TODO: Remove this before production -->
<!-- 
    <item
        android:id="@+id/stock_menu_item_load_items_from_spreadsheet"
        android:showAsAction="never"
        android:title="@string/stock_menu_item_load_items_from_spreadsheet"/>
-->
    <item
        android:id="@+id/main_help"
        android:icon="@mipmap/action_help"
        app:showAsAction="never"
        android:title="Help"/>

</menu>