<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item-->
        <!--android:id="@+id/add_list"-->
        <!--android:icon="@android:drawable/ic_menu_add"-->
        <!--app:showAsAction="always"-->
        <!--android:title="Add List"/>-->
    <item
        android:id="@+id/main_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about_app"/>
    <item
        android:id="@+id/main_help"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
