<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/shop_menu_item_add_name"-->
        <!--android:icon="@drawable/content_new"-->
        <!--android:showAsAction="always"-->
        <!--android:title="@string/shop_menu_item_add_item"/>-->
    <item
        android:id="@+id/shop_menu_item_reset_all"
        android:icon="@mipmap/ic_action_notepaper_zero"
        app:showAsAction="ifRoom"
        android:title="@string/shop_menu_item_reset_all"/>
    <item
        android:id="@+id/shop_menu_show_hide"
        android:icon="@mipmap/ic_action_notepaper_check"
        app:showAsAction="ifRoom"
        android:title="@string/shop_menu_show_bought_items"
        android:titleCondensed="@string/shop_menu_show_bought_items"/>
    <item
        android:id="@+id/shop_menu_item_sort_items"
        android:icon="@mipmap/ic_action_grabber"
        app:showAsAction="ifRoom"
        android:title="@string/shop_menu_item_sort_items"/>
    <item
        android:id="@+id/main_help"
        android:icon="@mipmap/action_help"
        app:showAsAction="never"
        android:title="Help"/>



</menu>