<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button
		android:id="@+id/add_stock_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:text="@string/add"
  		/>
	<Button
		android:id="@+id/reset_stock_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:text="@string/reset"
  		/>
  	<TextView
  		android:id="@+id/stock_item_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"    
        android:layout_marginRight="5dp"    
		android:layout_toRightOf="@+id/add_stock_button"
		android:layout_toLeftOf="@+id/reset_stock_button"
		android:text="@string/item"
		android:textSize="18sp"
  		/>
    <TextView
        android:id="@+id/stock_item_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"    
        android:layout_marginRight="5dp"    
        android:layout_toRightOf="@+id/add_stock_button"
        android:layout_toLeftOf="@+id/reset_stock_button"
        android:layout_below="@+id/stock_item_name"
        android:text="@string/item"
        android:textSize="14sp"
        />
</RelativeLayout>
